cigaradvisor/styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

@import url('reset.css');
@import url('font-fallbacks.css');

:root {
  /* colors */
  --clr-black: #000;
  --clr-pampas: #e9e4de;
  --deep-reddish-brown: #673841;
  --clr-dark-gray: #141414;
  --clr-white: #fff;
  --tan: #8e7b5c;
  --transparent-tan: #8E7B5C33;
  --subdued-gold: #b19b5e;
  --silver: #ccc;
  --very-light-grey: #ddd;
  --vv-light-grey: #e0e0e0;
  --medium-grey: #888;
  --neutral-grey: #eee;
  --grey: #333;
  --light-grey: #d3d3d3;
  --dark-grey: #3c3a3b;
  --off-white: #f7f7f7;
  --grey-background: #eaeaea;
  --charcoal: #1c1c1c;
  --dodger-blue: #1e90ff;

  /* functional-colors */
  --clr-text: var(--clr-dark-gray);

  /* filter colors (https://codepen.io/sosuke/pen/Pjoqqp) */
  --clr-filter-white: invert(100%);
  --clr-filter-gray: invert(18%) sepia(4%) saturate(304%) hue-rotate(277deg) brightness(98%) contrast(92%);
  --clr-filter-tan: invert(50%) sepia(27%) saturate(408%) hue-rotate(358deg) brightness(93%) contrast(91%);
  --clr-filter-subdued-gold: invert(62%) sepia(55%) saturate(302%) hue-rotate(6deg) brightness(90%) contrast(88%);


  /* fonts */
  --ff-arial: 'Arial', sans-serif;
  --ff-opensans: 'Open Sans', 'Open Sans Fallback', sans-serif;
  --ff-montserrat: 'Montserrat', 'Montserrat Fallback', sans-serif;
  --ff-alfaslabone: 'Alfa Slab One', 'Alfa Slab One Fallback', cursive;
  --ff-fontawesome: 'Font Awesome';

  /* heading sizes */
  --heading-font-size-xxxs: 16px;
  --heading-font-size-xxs: 18px;
  --heading-font-size-xs: 20px;
  --heading-font-size-s: 24px;
  --heading-font-size-m: 26px;
  --heading-font-size-l: 35px;
  --heading-font-size-xl: 40px;
  --heading-font-size-xxl: 45px;

  /* Font Weights */
  --font-weight-heavy: 900;
  --font-weight-bold: 700;
  --font-weight-semibold: 600;
  --font-weight-normal: 400;
  --font-weight-light: 300;
  --font-weight-thin: 100;

  /* Body */
  --body-font-size-xxs: 10px;
  --body-font-size-xs: 12px;
  --body-font-size-s: 14px;
  --body-font-size-m: 16px;
  --body-font-size-l: 18px;
  --body-font-size-xl: 20px;
  --body-font-size-xxl: 24px;
  --body-font-size-xxxl: 40px;

  /* Line Heights */
  --line-height-xs: 1.15em;
  --line-height-s: 1.25em;
  --line-height-m: 1.5em;
  --line-height-l: 1.75em;
  --line-height-xl: 2em;

  /* misc */
  --nav-height: 100px;
  --icon-size: var(--body-font-size-xxl);
}

body {
  display: none;
  margin: 0;
  color: var(--clr-text);
  font-family: var(--ff-arial);
}

body.appear {
  display: block;
}

header {
  height: var(--nav-height);
  position: sticky;
  top: 0;
  background-color: var(--clr-white);
  z-index: 1000;
}

main {
  padding-bottom: 40px;
}

footer {
  margin-top: 20px;
}

html {
  font-size: 100%;
  line-height: 1.5;
  scrollbar-gutter: stable;
}

*,
::before,
::after {
  box-sizing: border-box;
}

img {
  width: auto;
  height: auto;
  max-width: 100%;
  border-style: none;
}

h1 {
  font-size: var(--heading-font-size-m);
  font-family: var(--ff-alfaslabone);
  font-style: normal;
  font-weight: var(--font-weight-normal);
  text-transform: uppercase;
  color: var(--clr-text);
  margin: 2px auto;
}

h2 {
  font-family: var(--ff-montserrat);
  font-weight: var(--font-weight-heavy);
  text-transform: uppercase;
  color: var(--clr-text);
  margin: 0 auto;
  font-size: var(--heading-font-size-s);
}

i, em {
  font-style: italic;
}

a {
  font-family: var(--ff-montserrat);
  font-weight: var(--font-weight-normal);
  color: var(--clr-text);
  font-size: var(--body-font-size-m);
  background-color: transparent;
  text-decoration: none
}

p {
  margin: 16px 0;
  font-family: var(--ff-opensans);
  font-size: var(--body-font-size-m);
  font-weight: var(--font-weight-normal);
  line-height: var(--line-height-l);
  color: var(--clr-text);
}

a:hover {
  transition: .8s;
  text-decoration: none;
  outline-width: 0;
}

a:active,
a:hover {
  outline-width: 0;
}

ul {
  list-style: disc;
  margin: 10px;
}

li {
  margin: 4px 0;
  font-family: var(--ff-opensans);
  font-weight: var(--font-weight-normal);
  line-height: var(--line-height-m);
  color: var(--clr-text);
  font-size: var(--body-font-size-m);
  cursor: default;
  list-style-position: inside;
}

b, strong,
b > *, strong > *{
  font-weight: var(--font-weight-bold);
}

.sr-only {
  display: none;
}


.icon > img {
  width: var(--icon-size);
  height: var(--icon-size);
}

main .section {
  width: 100%;
}

main .section > div {
  max-width: 1080px;
  margin: 0 auto;
  padding: 15px;
}

main .section[data-layout] .layout-wrapper {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

main .section[data-layout] .layout-wrapper > div {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: space-between;
  gap: 20px;
}

main .section.stylized-header > .default-content-wrapper > h2 {
  text-align: center;
  text-transform: uppercase;
  font-family: var(--ff-montserrat);
  font-weight: 900;
  color: var(--tan);
  padding: 38px 15px;
  font-size: var(--heading-font-size-m);
}

main .default-content-wrapper {
  color: var(--clr-text);
}

main .section:not(.nobutton) .button-container {
  padding: 10px 10px 40px;
  text-align: center;
  text-transform: uppercase;
}

main .section:not(.nobutton) .button-container .button {
  font-style: normal;
  font-family: var(--ff-montserrat);
  font-weight: var(--font-weight-bold);
  color: var(--clr-white);
  text-transform: uppercase;
  background-color: var(--clr-black);
  border-color: var(--tan);
  border-width: 2px;
  border-radius: 0;
  border-style: solid;
  display: inline-block;
  line-height: 26px;
  height: 50px;
  min-height: 2.85rem;
  padding: 0.8em 1em;
  cursor: pointer;
  text-decoration: none;
  text-align: center;
  margin: 2px 0;
}

main .section:not(.nobutton) .button-container .button:hover {
  transition: .5s;
  background-color: var(--subdued-gold);
  border-color: var(--subdued-gold);
  text-decoration: none;
}

main .default-content-wrapper picture {
  display: block;
  position: relative;
  width: 100%;
  height: 100%;
  margin: 0 auto;
}

main .default-content-wrapper picture > img {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}


main .section.center {
  margin: 0 auto;
}

main .section.center .default-content-wrapper {
  text-align: center;
  padding: 0;
}

.section.background-dark-gray {
  --clr-text: var(--clr-white);

  background-color: var(--clr-dark-gray);
}

.section.background-pampas {
  background-color: var(--clr-pampas);
}

@media screen and (min-width: 600px) {
  h1 {
    font-size: 35px;
  }

  main .section.stylized-header > .default-content-wrapper > h2::before {
    content: 'decor';
    color: transparent;
    background: url('../icons/decorleft.png') center no-repeat;
    background-size: contain;
    margin-right: 15px;
  }

  main .section.stylized-header > .default-content-wrapper > h2::after {
    content: 'decor';
    color: transparent;
    background: url('../icons/decorright.png') center no-repeat;
    background-size: contain;
    margin-left: 15px;
  }
}

@media screen and (min-width: 900px) {
  :root {
    --nav-height: 130px;
  }

  header {
    background-color: transparent;
  }

  body.under-nav main {
    margin-top: calc(var(--nav-height) * -1);
  }

  h1 {
    font-size: var(--heading-font-size-xxl);
  }

  main > .section {
    margin-bottom: 40px;
  }

  main > .section.background-grey {
    background-color: var(--grey-background);
  }

  main .section[data-layout] .layout-wrapper {
    flex-direction: row;
  }



  main .section[data-layout="50/50"] .layout-wrapper > div {
    flex: 0 1 calc(50% - 10px);
  }

  main .section[data-layout="25/75"] .layout-wrapper > div:first-of-type {
    flex: 0 1 calc(25% - 10px);
  }

  main .section[data-layout="25/75"] .layout-wrapper > div:last-of-type {
    flex: 0 1 calc(75% - 10px);
  }


  main .section.stylized-header > .default-content-wrapper > h2 {
    font-size: var(--heading-font-size-xxl);
  }
}

@media screen and (min-width: 1200px) {
  h2 {
    font-size: 16px;
  }

  a, p {
    font-size: var(--body-font-size-m);
    line-height: var(--line-height-m);
  }

  .default-content-wrapper {
    padding: 0;
  }
}

